[gd_scene load_steps=5 format=2]

[ext_resource path="res://Setup.gd" type="Script" id=1]
[ext_resource path="res://fonts/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://JamTimer.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BGPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Settings" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.5
margin_top = -211.5
margin_right = 181.5
margin_bottom = 211.5
custom_constants/separation = 20

[node name="Title" type="Label" parent="Settings"]
margin_right = 363.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Jam Timer"
align = 1

[node name="3Hours" type="Button" parent="Settings"]
margin_top = 80.0
margin_right = 363.0
margin_bottom = 100.0
hint_tooltip = "Sets the timer to a 3 hour preset."
text = "TriJam (3 Hour)"

[node name="24Hours" type="Button" parent="Settings"]
margin_top = 120.0
margin_right = 363.0
margin_bottom = 140.0
hint_tooltip = "Sets the timer to a 48 hour preset."
text = "Weekend (48 Hour)"

[node name="HBoxContainer" type="HBoxContainer" parent="Settings"]
margin_top = 160.0
margin_right = 363.0
margin_bottom = 191.0
alignment = 1

[node name="Hours" type="SpinBox" parent="Settings/HBoxContainer"]
margin_left = 58.0
margin_right = 132.0
margin_bottom = 31.0
hint_tooltip = "Hours for custom time."

[node name="Label" type="Label" parent="Settings/HBoxContainer"]
margin_left = 136.0
margin_right = 140.0
margin_bottom = 31.0
size_flags_vertical = 3
text = ":
"
align = 3
valign = 3

[node name="Mins" type="SpinBox" parent="Settings/HBoxContainer"]
margin_left = 144.0
margin_right = 218.0
margin_bottom = 31.0
hint_tooltip = "Minutes for custom time."

[node name="Label2" type="Label" parent="Settings/HBoxContainer"]
margin_left = 222.0
margin_right = 226.0
margin_bottom = 31.0
size_flags_vertical = 3
text = ":
"
align = 3
valign = 3

[node name="Sec" type="SpinBox" parent="Settings/HBoxContainer"]
margin_left = 230.0
margin_right = 304.0
margin_bottom = 31.0
hint_tooltip = "Seconds for custom time."

[node name="SetCustom" type="Button" parent="Settings"]
margin_top = 211.0
margin_right = 363.0
margin_bottom = 231.0
hint_tooltip = "Sets the timer time from the time fields above."
text = "Set Custom Time"

[node name="TimerLabel" type="Label" parent="Settings"]
margin_top = 251.0
margin_right = 363.0
margin_bottom = 265.0
hint_tooltip = "Preview time for the timer."
mouse_filter = 1
text = "00:00:00.000"
align = 1

[node name="Label2" type="Label" parent="Settings"]
margin_top = 285.0
margin_right = 363.0
margin_bottom = 299.0
text = "Alarm Sound"

[node name="Alarm" type="OptionButton" parent="Settings"]
margin_top = 319.0
margin_right = 363.0
margin_bottom = 339.0
hint_tooltip = "Choose a sound for the alarm.
Any audio files in the same folder as the timer will be loaded at startup for custom alarms."

[node name="Preview" type="Button" parent="Settings"]
margin_top = 359.0
margin_right = 363.0
margin_bottom = 379.0
hint_tooltip = "Plays a preview of the selected alarm sound."
text = "Preview"

[node name="TransparentBG" type="CheckBox" parent="Settings"]
margin_top = 399.0
margin_right = 363.0
margin_bottom = 423.0
hint_tooltip = "Toggle transparent background for video overlays."
pressed = true
text = "Transparent Background"

[node name="ShowTimer" type="Button" parent="Settings"]
margin_top = 443.0
margin_right = 363.0
margin_bottom = 463.0
hint_tooltip = "Finish setup and load the timer."
text = "Setup Timer"

[node name="AlarmPreview" type="AudioStreamPlayer" parent="."]

[node name="JamTimer" parent="." instance=ExtResource( 3 )]

[node name="TimerLabel" parent="JamTimer/HBoxContainer" index="0"]
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1

[node name="StartPause" parent="JamTimer/HBoxContainer/Controls" index="0"]
hint_tooltip = "Starts and pauses the timer."

[node name="Mute" parent="JamTimer/HBoxContainer/Controls" index="1"]
hint_tooltip = "Mutes the alarm without pausing the timer."

[node name="MinusTime" parent="JamTimer/HBoxContainer/Controls" index="3"]
hint_tooltip = "Subtracts 1 second from the timer.
Ctrl - Subtract 5 seconds
Shift - Subract 10 seconds
Ctrl + Shift - Subtract 50 seconds"

[node name="PlusTime" parent="JamTimer/HBoxContainer/Controls" index="5"]
hint_tooltip = "Adds 1 second to the timer.
Ctrl - Add 5 seconds
Shift - Add 10 seconds
Ctrl + Shift - Add 50 seconds
"

[node name="Stop" parent="JamTimer/HBoxContainer/Controls" index="7"]
hint_tooltip = "Stops the timer and returns to the setup menu. The timer will remain in its current state unless you change the time during setup.."

[connection signal="pressed" from="Settings/3Hours" to="." method="_on_3Hours_pressed"]
[connection signal="pressed" from="Settings/24Hours" to="." method="_on_24Hours_pressed"]
[connection signal="pressed" from="Settings/SetCustom" to="." method="_on_SetCustom_pressed"]
[connection signal="item_selected" from="Settings/Alarm" to="." method="_on_Alarm_item_selected"]
[connection signal="pressed" from="Settings/Preview" to="." method="_on_Preview_pressed"]
[connection signal="toggled" from="Settings/TransparentBG" to="." method="_on_TransparentBG_toggled"]
[connection signal="pressed" from="Settings/ShowTimer" to="." method="_on_ShowTimer_pressed"]
[connection signal="pressed" from="JamTimer/HBoxContainer/Controls/Stop" to="." method="_on_Stop_pressed"]

[editable path="JamTimer"]
